# FitLJ

./: .bumpversion.cfg  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/installation/: installation.rst
docs/main/: installation.rst  introduction.rst
docs/tutorials/: tutorials.rst
docs/tutorials/bulk_cu/: bulk_cu.rst  fit.py  run_emt.py
examples/: Cu.db  bulk_copper_molecular_dynamics_1000K.out  bulk_copper_molecular_dynamics_1000K.py  fit.py  run_emt.py  run_md.out  run_md.py
fitlj/: __init__.py  fit_model.py  io.py  my_module.py
fitlj/fitting/: fit_model.py
fitlj/io/: ase_database.py
tests/: bulk_copper_molecular_dynamics_1000K.db  test_ase_database.py  test_fit_model.py  test_io.py  test_my_module.py
tests/files/: bulk_copper_molecular_dynamics_1000K.db  bulk_copper_molecular_dynamics_1000K.py  bulk_copper_molecular_dynamics_1000K.traj
